bugfix(css): Fixed a button overlap bug

--- a/style.css
+++ b/style.css
@@ -278,6 +278,16 @@ section .main-container {
     transition: 0.2s linear;
 }
 
+button {
+    white-space: normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
 .content button:hover {
     scale: 1.1;
     color: var(--primary-color);
